--- a/index.html
+++ b/index.html
@@ -101,18 +101,18 @@
 								</ul>
 							</li>
 						</ul>
-						<ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+						<!-- <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
 							<li class="nav-item">
 								<a class="nav-link" href="">About Us</a>
 							</li>
-						</ul>
+						</ul> -->
 						<!-- <form class="d-flex">
 					  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
 					  <button class="btn title-button" type="submit">Search</button>
 					</form> -->
 						<a href="form.html">
 						<button type="button" class="btn signup-button title-button">
-							Sign Up our Petetion
+							Sign Up our Petition
 						</button>
 					</a>
 					</div>
@@ -470,7 +470,7 @@
 		</ul>
 	</section>
 	<section id="petetion">
-		<h1 id="signup-petetion"> Sign up our Petetion</h1>
+		<h1 id="signup-petetion"> Sign up our Petition</h1>
 		<div class="row">
 			<div class="col-lg-6" style="padding: 1% 2% 2% 4%;">
 				<img src="images/pet.jpg" alt="" style="width: 100%; height: auto; margin-bottom: 20px;">
@@ -481,7 +481,7 @@
 				We appeal you to play your part in transforming <span id="DTU">DTU</span> to a plastic-friendly place.
 				<br>
 				<a href="form.html">
-				<button class="btn btn-outline-warning btn-lg" style="color: #fff; font-weight: bold; margin-top: 20px;"> SIGN UP OUR PETETION</button></a>
+				<button class="btn btn-outline-warning btn-lg" style="color: #fff; font-weight: bold; margin-top: 20px;"> SIGN UP OUR PETITION</button></a>
 			</div>
 		</div>
 	</section>
